# copier-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.jinja  README.md  README.md.jinja  copier.yml  hi.txt  pyproject.toml  pyproject.toml.jinja  {% if include_package %}.pre-commit-config.yaml{% endif %}  {% if true %}.gitignore{% endif %}
.devcontainer/: Dockerfile  Dockerfile.jinja  devcontainer.json  devcontainer.json.jinja
archive/_template/: Makefile.jinja  pyproject.toml.jinja
archive/_template/{% if include_devcontainer %}.devcontainer{% endif %}/: devcontainer.json.jinja
archive/_template/{% if include_tests %}tests{% endif %}/: test_project_template.py.jinja
archive/template/: README.md.jinja
project-template/: .gitignore  copier.yml
template/: .gitignore  .pre-commit-config.yaml  Makefile.jinja  pre-commit-config.yaml  pyproject.toml.jinja
template/.github/workflows/: ci.yaml.jinja
template/src/{{ package_name }}/: main.py
template/tests/: test_placeholder.py.jinja
tests/: test_project_template.py.jinja
{% if include_devcontainer %}.devcontainer{% endif %}/: devcontainer.json.jinja
