[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
numpy = "1.21.5"  # Prevents failing build M1

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"
pre-commit = "^2.20.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2.0.post0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
